# lang

./: .credo.exs  .dialyzer_ignore.exs  .doc_allowlist  .env.example  .envrc  .formatter.exs  .gitignore  AGENTS.md  AI_AGENT_LSP_COMPARISON_FRAMEWORK.md  ASH_AND_EVENTS_FIXED.md  BACKDOOR_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  COST_CALCULATION_SYSTEM.md  DEBUG_HARNESS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  Elixir.Lang.MCP.AdvancedProxy.beam  Elixir.Lang.MCP.OAuthIntegration.beam  Elixir.Lang.ML.AnomalyDetector.beam  GRAPH_REASONER.md  GUARD_MESH_ARCHITECTURE.md  HANDOFF_PROMPT.md  JSON_LD_LSP_EDITOR_INTEGRATION.md  LANG_INNOVATION_ARCHAEOLOGY.md  LATENT_SHIELD_EFFICACY_REPORT.md  LICENSE  LSP_ENHANCEMENT_ROADMAP.md  LSP_RESULTS_SUMMARY.md  Lang.Native.FSWatcher  MARKDOWN_LD_SESSIONS_L3.md  MCP_IMPLEMENTATION.md  Makefile  NEXT_CLAUDE_PROMPT.md  OBAN_ISSUE_RESOLUTION.md  OPENAPI_IMPLEMENTATION_COMPLETE.md  PARSER_REFACTORING_PLAN.md  PLATFORM_100_PERCENT_COMPLETE.md  QUICK_COMMANDS.md  (+46 more)
.claude/: cleanup_summary.md  settings.local.json
.github/agents/: copilot-bootstrap.agent.md
.github/workflows/: events-lint.yml  events-sync.yml  (+2 more)
.jules/: bolt.md  palette.md  sentinel.md
.secrets/: env.backup.20250823_074203
_build/: packages.json
assets/: build.mjs  package.json  pnpm-lock.yaml
cave/: cave.mbt  cave_difficult_test.mbt  cave_easy_test.mbt  cave_mid_test.mbt  cave_spec.mbt  cave_test.mbt  moon.pkg  moon.pkg.json
codex/: codex.mbt  codex_easy_test.mbt  codex_spec.mbt
cognitive/: boundary.mbt  boundary_test.mbt  moon.pkg  moon.pkg.json
config/: billing.exs  config.exs  dev.exs  events.exs  prod.exs  runtime.exs  runtime.production.exs  test.exs
crypto/: crypto.mbt  moon.pkg
deploy/: secrets.production.yml
docs/: 01_overview.md  02_conversation_rehearsal.md  03_headless_scripts.md  04_stylometrics.md  05_timemachine_replay.md  06_limits_and_applications.md  07_implementation_guide.md  AI_MEMORY_TOC_PREVIEW.md  API_DOCUMENTATION.md  BINARY_BLOB_PATTERN.md  CONVERSATION_REHEARSAL.md  CRITICAL_FIXES_IMPLEMENTED.md  DEVELOPMENT.md  DIALYZER.md  EXAMPLES.md  EXPLANATIONS_RENDERING_PLAN.md  FINAL_AI_ECOSYSTEM_SUMMARY.md  FOLDER_API.md  FOLDER_API_SYNC.jsonld  FOLDER_API_SYNC.md  IMPLEMENTATION_STATUS.md  IMPLEMENTED_LSP_HANDLERS.md  JSONLD_SIGNING.md  LSP_ANALYTICS_INTEGRATION.md  LSP_ANALYTICS_SYSTEM_GUIDE.md  LSP_CHAT_SYSTEM_COMPLETE.md  LSP_COMPLETION_SUMMARY.md  LSP_CONNECT_QUICKSTART.md  LSP_EDITOR_README.md  LSP_IMPLEMENTATION_AUDIT.md  LSP_KG_BUILD_STREAMING.md  LSP_NEXT_STEPS.md  MARKDOWN_LD_DIAGRAMS_L2.md  MARKDOWN_LD_SPEC_v0.3.md  PORTABLE_WIT_WASI_PARADIGM.md  PRIORITY.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  (+19 more)
emergent/: emergent.mbt  moon.pkg  moon.pkg.json
examples/: chat_demo.exs  demo_all_providers.exs  demo_cost_calculation.exs  demo_cost_system.exs  demo_opencode.exs  manual_test_grok.exs  test_implemented_handlers.exs  test_oban_table.exs  verify_oban_fix.exs
finger/: finger.mbt
gemini/: gemini.mbt  moon.pkg
gemtext/: gemtext.mbt
gopher/: gopher.mbt
guard-mesh-worker/: package.json  tsconfig.json  wrangler.toml
lib/: lang.ex  lang_web.ex
lsp/: client.mbt  frame.mbt  lsp_capsule_spec.mbt  lsp_capsule_spec_test.mbt  lsp_spec.mbt  lsp_spec_test.mbt  lsp_test.mbt  message.mbt  moon.pkg  scan.mbt  scan_test.mbt
mulsp/: COGNITIVE_STACK.md  ROADMAP.md  WASM_BRIDGE.md  mix.exs  mulsp.mbt  mulsp_spec.mbt  mulsp_spec_test.mbt
muyata/: DIRECTION.md  ROADMAP.md  mix.exs  muyata.mbt  policy.mbt  policy_test.mbt
native/fs_scanner/: Cargo.toml
native/fs_scanner/src/: lib.rs
native/fs_watcher/: Cargo.toml
native/fs_watcher/src/: lib.rs
native/graph_reasoner/: Cargo.toml
native/graph_reasoner/src/: centrality.rs  community_detection.rs  dependency_analyzer.rs  graph_mining.rs  knowledge_graph.rs  lib.rs  pattern_matching.rs  reasoning_engine.rs  semantic_bridge.rs
native/lang_parser/: .gitignore  Cargo.toml
native/lang_parser/src/: analysis.rs  lib.rs  performance.rs  semantic_diff.rs  streaming_parser.rs  stylometrics.rs
native/lang_parser/src/parsers/: json_parser.rs  markdown.rs  markdown_parser.rs  mod.rs  text_parser.rs
native/lang_perf/: Cargo.toml
native/lang_perf/src/: lib.rs
native/tree_parser/: Cargo.toml
native/tree_parser/src/: lib.rs
net/: discovery.mbt  gmu_server.mbt  gopher_server.mbt  moon.pkg  nntp_server.mbt  peer_client.mbt  server.mbt
nntp/: nntp.mbt
node/: bus.mbt  cas.mbt  host.mbt  moon.pkg  node.mbt
plugin/: moon.pkg  moon.pkg.json  registry.mbt  registry_test.mbt
proto/: app_kernel.mbt  app_kernel_test.mbt  capsule.mbt  capsule_test.mbt  proto.mbt  runtime_coredump.mbt  runtime_coredump_test.mbt
rules/: README.md
scripts/: analyze_seepage.sh  audit_lsp_specs.exs  audit_parsers.exs  capture_lsp_pcap.sh  clean.sh  deploy_initial.sh  deploy_update.sh  dialyzer_build.sh  enroll_tester.sh  find_links.exs  fix_urls.exs  folder_rollout_validation.md  gen_tester_tokens.sh  gen_tester_tokens_batch.sh  generate-icons.sh  generate-lang-fonts-fixed.sh  generate-lang-fonts-simple.sh  generate-lang-fonts-v2.sh  generate-lang-fonts.sh  generate_lang_fonts.py  generate_lang_fonts_simple.py  link_audit.exs  lsp_debug_plan.sample.json  lsp_harness.sh  lsp_sandbox_harness.exs  migrate_secrets.sh  obliterate_copilot_seepage.sh  performance_monitor.exs  pre-commit-check.sh  release.sh  scan_secrets.sh  secure_secrets.sh  setup_stripe.sh  simple_url_fix.exs  tcp_stdio_bridge.exs  three_body_lock_snapshot.sh  validate_folder.exs  validate_links.exs  verify_deployment.sh
spore/: moon.pkg  moon.pkg.json  spore.mbt  spore_test.mbt
test/: agent.txt  lang_test.exs  mcp_integration_test.exs  qcp-diagnostic-prompts.md  test_graph_reasoner.exs  test_helper.exs
wasm_iface/: iface.mbt  iface_test.mbt  moon.pkg  moon.pkg.json
work/: AGENT_QUICKSTART.md  ENDPOINTS.md  HAPROXY.md  PLAN.md  SUPPORT_MATRIX.csv  ai_agent_workspace_optimization.md  jsonld_spec_proposals.md  markdown_ld_spec_proposals.md  mcp_broker_deployment_guide.md  multi_agent_orchestration.md  qwen.md
(+1559 files in other folders)
