[package]
name = "fs_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_scanner"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32"
rayon = "1.8"                    # Parallel processing
ignore = "0.4"                  # gitignore-aware file walking (from ripgrep)
grep = "0.3"                    # ripgrep's search functionality  
memmap2 = "0.9"                 # memory-mapped files for speed
dashmap = "5.5"                 # concurrent hashmap
num_cpus = "1.16"               # CPU detection for optimal threading

# Tree-sitter for semantic code parsing - use available versions
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20" 
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-json = "0.20"

# Filesystem operations
walkdir = "2.4"
notify = "6.1"                  # filesystem watching
regex = "1.10"                  # regex support
once_cell = "1.21"              # for lazy static initialization

[profile.release]
lto = true              # Link-time optimization for maximum speed
codegen-units = 1       # Single codegen unit for better optimization
opt-level = 3           # Maximum optimization
panic = "abort"         # Smaller binary size
strip = true           # Strip symbols