[package]
name = "graph_reasoner"
version = "0.1.0"
edition = "2021"

[lib]
name = "graph_reasoner"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core graph libraries
petgraph = { version = "0.6", features = ["rayon", "serde"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }

# High-performance collections and algorithms
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
fnv = "1.0"
smallvec = { version = "1.11", features = ["serde"] }
bitvec = "1.0"

# Specialized graph algorithms - using petgraph built-ins instead

# Text processing integration
regex = "1.10"
unicode-segmentation = "1.11"
aho-corasick = "1.1"

# Numerical computing
approx = "0.5"
num-traits = "0.2"
statrs = "0.16"

# Parallel processing and concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"

# Memory management and optimization
mimalloc = { version = "0.1", default-features = false }
lru = "0.12"
bloom = "0.3"

# Compression and serialization
lz4_flex = "0.11"
bincode = "1.3"
rmp-serde = "1.1"

# Hashing and indexing
xxhash-rust = { version = "0.8", features = ["xxh64"] }
fxhash = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging for debugging
log = "0.4"

# Random number generation for algorithms
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Time and duration utilities
instant = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
target-cpu = "native"
overflow-checks = false

[profile.dev]
opt-level = 1
debug = true

[features]
default = [
    "knowledge-graphs",
    "dependency-analysis", 
    "community-detection",
    "centrality-measures",
    "path-algorithms",
    "pattern-matching",
    "graph-mining",
    "reasoning-engine"
]

# Core graph processing features
knowledge-graphs = []
dependency-analysis = []
community-detection = []
centrality-measures = []
path-algorithms = []

# Advanced reasoning features  
pattern-matching = []
graph-mining = []
reasoning-engine = []
semantic-analysis = []

# Performance and optimization features
parallel-processing = []
memory-optimization = []
caching = []

# Integration features
text-integration = []
ast-integration = []