[package]
name = "lang_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "lang_parser"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.11"
rayon = "1.8"
ahash = "0.8"
once_cell = "1.19"
memmap2 = "0.9"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-markdown = "0.7.1"
pulldown-cmark = "0.9"
scraper = "0.18"
fancy-regex = "0.12"
simd-json = "0.13"
aho-corasick = "1.1"
dashmap = "5.5"
lru = "0.12"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1