[package]
name = "lang_perf"
version = "0.1.0"
edition = "2021"

[lib]
name = "lang_perf"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
memmap2 = "0.9"
lz4_flex = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
mimalloc = { version = "0.1", default-features = false }
dashmap = "5.5"
once_cell = "1.19"
libc = "0.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# SIMD optimizations for x86_64
core_arch = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
target-cpu = "native"

[profile.dev]
opt-level = 1

[features]
default = ["simd"]
simd = []