[package]
name = "tree_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "tree_parser"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-elixir = "0.1"
tree-sitter-markdown = "0.7.0"
tree-sitter-json = "0.20"
tree-sitter-yaml = "0.6.1"
tree-sitter-toml = "0.20.0"
tree-sitter-html = "0.20"
tree-sitter-css = "0.20"
tree-sitter-sql = "0.0.2"
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
mimalloc = { version = "0.1", default-features = false }
globset = "0.4"
walkdir = "2.4"
memmap2 = "0.9"
lz4_flex = "0.11"
crossbeam-channel = "0.5"
regex = "1.10"
unicode-segmentation = "1.11"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
target-cpu = "native"

[profile.dev]
opt-level = 1

[features]
default = ["ast-caching", "pattern-matching", "architectural-rules"]
ast-caching = []
pattern-matching = []
architectural-rules = []
performance-monitoring = []
parallel-parsing = []